# diabetes_neural_network

./: .gitignore  README.md  STREAMLIT_README.md  packages.txt  pyproject.toml  requirements.txt  run_streamlit.sh  setup.sh  start_services.py  stop_streamlit.sh  streamlit_app.py  streamlit_requirements.txt  test_api.py  uv.lock.backup
.streamlit/: secrets.toml
app/: README.md  main.py  requirements.txt  run.py
app/api/v1/endpoints/: health.py  prediction.py
app/core/: config.py
app/models/: schemas.py
app/services/: model_service.py
notebooks/: baseline_model.ipynb  deeper_model.ipynb  eda.ipynb  exploratory_data_analysis.ipynb  model.h5  model_2025_09_21.ipynb  model_baseline.h5  requirements.txt  trabalho_deep_learninG_20250925.ipynb
notebooks/utils/: early_stopping.py  plot.py
