[project]
name = "diabetes-neural-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.40.36",
    "ipykernel==6.30.1",
    "ipywidgets==8.1.7",
    "kagglehub[pandas-datasets]==0.3.13",
    "matplotlib==3.10.6",
    "mlflow==3.4.0",
    "numpy==2.1",
    "pandas==2.3.2",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "tensorflow==2.19.1",
]
